Opened 12 years ago

Closed 12 years ago

Last modified 12 years ago

#1334 closed defect (fixed)

Memleak when reading dvvideo in avi

Reported by: Carl Eugen Hoyos Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: leak avi dv
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

$ valgrind --leak-check=full ./ffmpeg_g -i dvmemleak.avi
==30795== Memcheck, a memory error detector.
==30795== Copyright (C) 2002-2007, and GNU GPL'd, by Julian Seward et al.
==30795== Using LibVEX rev 1732, a library for dynamic binary translation.
==30795== Copyright (C) 2004-2007, and GNU GPL'd, by OpenWorks LLP.
==30795== Using valgrind-3.2.3, a dynamic binary instrumentation framework.
==30795== Copyright (C) 2000-2007, and GNU GPL'd, by Julian Seward et al.
==30795== For more details, rerun with: -v
==30795==
ffmpeg version N-40924-g349c624 Copyright (c) 2000-2012 the FFmpeg developers
  built on May 21 2012 10:01:24 with gcc 4.3.2
  configuration: --cc=/usr/local/gcc-4.3.2/bin/gcc --disable-optimizations
  libavutil      51. 53.100 / 51. 53.100
  libavcodec     54. 21.101 / 54. 21.101
  libavformat    54.  5.101 / 54.  5.101
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 75.100 /  2. 75.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
Guessed Channel Layout for  Input Stream #0.1 : stereo
Input #0, avi, from 'dvmemleak.avi':
  Duration: 00:01:30.72, start: 0.000000, bitrate: 45 kb/s
    Stream #0:0: Video: dvvideo, yuv411p, 720x480, 28771 kb/s, SAR 8:9 DAR 4:3, 29.97 tbr, 29.97 tbn, 29.97 tbc
    Stream #0:1: Audio: pcm_s16le, 48000 Hz, stereo, s16, 1536 kb/s
At least one output file must be specified
==30795==
==30795== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 3 from 1)
==30795== malloc/free: in use at exit: 23,236 bytes in 1 blocks.
==30795== malloc/free: 145 allocs, 144 frees, 1,457,436 bytes allocated.
==30795== For counts of detected errors, rerun with: -v
==30795== searching for pointers to 1 not-freed blocks.
==30795== checked 6,294,740 bytes.
==30795==
==30795== 23,236 bytes in 1 blocks are possibly lost in loss record 1 of 1
==30795==    at 0x4021A50: memalign (in /usr/lib/valgrind/x86-linux/vgpreload_memcheck.so)
==30795==    by 0x4021AAA: posix_memalign (in /usr/lib/valgrind/x86-linux/vgpreload_memcheck.so)
==30795==    by 0x875B1CE: av_malloc (mem.c:95)
==30795==    by 0x875B349: av_mallocz (mem.c:187)
==30795==    by 0x81C1963: avformat_new_stream (utils.c:2948)
==30795==    by 0x80AF6AD: avi_read_header (avidec.c:454)
==30795==    by 0x81B8A84: avformat_open_input (utils.c:642)
==30795==    by 0x805A3F4: opt_input_file (ffmpeg.c:4320)
==30795==    by 0x80610E0: parse_option (cmdutils.c:305)
==30795==    by 0x8061226: parse_options (cmdutils.c:338)
==30795==    by 0x8060353: main (ffmpeg.c:5916)
==30795==
==30795== LEAK SUMMARY:
==30795==    definitely lost: 0 bytes in 0 blocks.
==30795==      possibly lost: 23,236 bytes in 1 blocks.
==30795==    still reachable: 0 bytes in 0 blocks.
==30795==         suppressed: 0 bytes in 0 blocks.

Attachments (1)

dvmemleak.avi (500.0 KB ) - added by Carl Eugen Hoyos 12 years ago.

Download all attachments as: .zip

Change History (3)

by Carl Eugen Hoyos, 12 years ago

Attachment: dvmemleak.avi added

comment:1 by Michael Niedermayer, 12 years ago

Component: undeterminedavformat
Keywords: dv added
Reproduced by developer: set
Resolution: fixed
Status: newclosed

comment:2 by Carl Eugen Hoyos, 12 years ago

Keywords: leak added; memleak removed
Note: See TracTickets for help on using tickets.