avidec: fix AVStream.info memleak with dv.

Fixes Ticket1334

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>